// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useStoreMacro generate actual shallow store implementation: generate actual shallow store implementation 1`] = `

import useStoreMacro from "../src/index.macro";

const {
  count,
  decrementCount,
  incrementCount,
} = useStoreMacro();

      ↓ ↓ ↓ ↓ ↓ ↓

import { useShallowStore as _useShallowStore } from "hooks";

const { count, decrementCount, incrementCount } = _useShallowStore((s) => ({
  count: s.count,
  decrementCount: s.decrementCount,
  incrementCount: s.incrementCount,
}));


`;

exports[`useStoreMacro should support object destructuring assignment: should support object destructuring assignment 1`] = `

import useStoreMacro from "../src/index.macro";

const {
  count,
  decrementCount: decrement,
  incrementCount: increment,
} = useStoreMacro();

      ↓ ↓ ↓ ↓ ↓ ↓

import { useShallowStore as _useShallowStore } from "hooks";

const {
  count,
  decrementCount: decrement,
  incrementCount: increment,
} = _useShallowStore((s) => ({
  count: s.count,
  decrementCount: s.decrementCount,
  incrementCount: s.incrementCount,
}));


`;
